--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: flask-app
-        image: localhost:5000/flask-app:latest
+        image: localhost:5000/flask-app:local
         ports:
         - containerPort: 5000
 ---
